--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,8 @@
-# FROM node:16-alpine
+FROM node:16-alpine
 
-#  ...
+WORKDIR /
+COPY package*.json ./
+RUN npm install
+COPY . .
+EXPOSE 3001
+CMD ["npm", "start"]
