--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -53,12 +53,15 @@
   },
   "dependencies": {
     "bcrypt": "5.0.1",
+    "celebrate": "^15.0.1",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "http-status": "^1.5.2",
+    "http-status-codes": "^2.2.0",
     "jest": "27.4.3",
-    "jsonwebtoken": "8.5.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.3.3",
     "sequelize": "6.9.0"
   }
